@@ -2,8 +2,76 @@
 
 Jvm 实践笔记
 
-
 ## jvm 参数 ##
+
+java.io.tmpdir windows 默认：C:\Users\\{user}\AppData\Local\Temp\; linux  默认： /tmp
+
+
+
+## Jvm 命令 ##
+
+### JPS  ###
+
+reference link : https://docs.oracle.com/javase/7/docs/technotes/tools/share/jps.html
+
+Java Virtual Machine Process Status Tool
+
+只能列出当前用户的Java进程
+
+默认会在java.io.tmpdir指定的临时文件夹目录下生成一个 hsperfdata_{user}的文件夹
+
+
+
+- jps --help 帮助
+
+```
+>jps --help
+illegal argument: --help
+usage: jps [-help]
+       jps [-q] [-mlvV] [<hostid>]
+```
+
+
+
+- jps -m 主函数参数
+
+```
+>jps -m
+12320 Jps -m
+5284
+5316 RemoteMavenServer36
+7268 JpsMain
+```
+
+- jps -l 全类名
+
+```
+>jps -l
+11488 sun.tools.jps.Jps
+5284
+5316 org.jetbrains.idea.maven.server.RemoteMavenServer36
+
+```
+
+- jps -v 程序的jvm参数
+
+```
+jps -v
+11348 Jps -Dapplication.home=D:\professional\jdk1.8.0_131 -Xms8m
+5284  exit -Xms128m -Xmx1009m -XX:ReservedCodeCacheSize=240m -XX:+UseConcMarkSweepGC -XX:SoftRefLRUPolicyMSPerMB=50 -ea -XX:CICompilerCount=2 -Dsun.io.useCanonPrefixCache=false -Djdk.http.auth.tunneling.disa
+bledSchemes="" -XX:+HeapDumpOnOutOfMemoryError -XX:-OmitStackTraceInFastThrow -Djdk.attach.allowAttachSelf=true -Dkotlinx.coroutines.debug=off -Djdk.module.illegalAccess.silent=true -Djb.vmOptionsFile=C:\Use
+rs\89354\AppData\Roaming\JetBrains\IdeaIC2020.1\idea64.exe.vmoptions -Djava.library.path=D:\professional\IntelliJ IDEA\IntelliJ IDEA Community Edition 2020.1\jbr\\bin;D:\professional\IntelliJ IDEA\IntelliJ I
+DEA Community Edition 2020.1\jbr\\bin\server -Didea.platform.prefix=Idea -Didea.jre.check=true -Dide.native.launcher=true -Didea.paths.selector=IdeaIC2020.1 -XX:ErrorFile=C:\Users\89354\java_error_in_idea_%p
+.log -XX:HeapDumpPath=C:\Users\89354\java_error_in_idea.hprof
+5316 RemoteMavenServer36 -Djava.awt.headless=true -Dmaven.defaultProjectBuilder.disableGlobalModelCache=true -Xmx768m -Didea.maven.embedder.version=3.6.1 -Dmaven.ext.class.path=D:\professional\IntelliJ IDEA\
+IntelliJ IDEA Community Edition 2020.1\plugins\maven\lib\maven-event-listener.jar -Dfile.encoding=GBK
+
+```
+
+
+$$
+
+$$
 
 
 ## Arthas ##
